--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-  <title>Document</title>
+  <title>Dan Meat Flavoured Yogur</title>
   <!-- This is Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -50,7 +50,7 @@
 
       <div class="row">
         <div class="col-12 col-md-7 text-center text-md-left">
-          <h1 class="display-3 text-white drop-shadow">Thick & Creamy</h1>
+          <h1 class="display-3 text-white drop-shadow">Thick &amp; Creamy</h1>
           <p class="lead">With real meat chunks</p>
           <a class="btn btn-outline-light btn-lg mt-4 px-5 py-3 mb-5 mb-md-0" href="#" role="button">Pricing</a>
         </div>
